--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,20 @@
 
 @import "tailwindcss/utilities";
 
+#root {
+    width: 100%;
+    height: 100vh;
+}
 
 body{
     /* background: #30164e; */
     background: rgb(120,7,143);
     background: linear-gradient(90deg, rgba(120,7,143,1) 5%, rgba(48,22,78,1) 83%);
+}
 
+
+@media  (max-width:490px) {
+    body{
+        background: rgb(120,7,143);
+    }
 }
